book frame: make frame background black to prevent flickering between chapters

--- a/src/features/book-frame/style.css
+++ b/src/features/book-frame/style.css
@@ -9,6 +9,7 @@
     width: 100%;
     height: 100%;
     border: 0;
+    background: #000;
 }
 
 .book-loading {
